--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,5 +1,5 @@
 /****************************BODY STYLES*****************************/
-$bodybg: url("https://source.unsplash.com/1600x900/?landscape");
+$bodybg: url("https://source.unsplash.com/1600x900/?weather");
 
 body {
   display: flex;
@@ -107,4 +107,9 @@ h1.temp {
 /****************************WEATHER CONTAINER STYLES END*****************************/
 
 /****************************MEDIA QUERIES*****************************/
+@media(max-width:395px){
+  .weather.loading:after {
+    top: -12px;
+  }
+}
 /****************************MEDIA QUERIES*****************************/
