--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,7 +56,7 @@ button {
   width: 44px;
   outline: none;
   background: #7c7c7c2b;
-  color: white;
+  color: #fff;
   cursor: pointer;
   -webkit-transition: 0.2s ease-in-out;
   transition: 0.2s ease-in-out;
@@ -68,7 +68,7 @@ input.search-bar {
   padding: 0.4em 1em;
   border-radius: 24px;
   background: #7c7c7c2b;
-  color: white;
+  color: #fff;
   font-family: inherit;
   font-size: 105%;
   width: calc(100% - 100px);
@@ -83,6 +83,11 @@ button:hover {
 h1.temp {
   margin: 0;
   margin-bottom: 0.4em;
+  cursor: pointer;
+}
+
+h1.temp:hover {
+  color: #a8a7a7;
 }
 
 /****************************TEMP AREA STYLES END*****************************/
