--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -48,7 +48,7 @@ button {
   width: 44px;
   outline: none;
   background: #7c7c7c2b;
-  color: white;
+  color: #fff;
   cursor: pointer;
   transition: 0.2s ease-in-out;
 }
@@ -59,7 +59,7 @@ input.search-bar {
   padding: 0.4em 1em;
   border-radius: 24px;
   background: #7c7c7c2b;
-  color: white;
+  color: #fff;
   font-family: inherit;
   font-size: 105%;
   width: calc(100% - 100px);
@@ -74,6 +74,12 @@ button:hover {
 h1.temp {
   margin: 0;
   margin-bottom: 0.4em;
+  cursor: pointer;
+}
+
+h1.temp:hover
+{
+  color: #a8a7a7;
 }
 /****************************TEMP AREA STYLES END*****************************/
 
