--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -36,6 +36,7 @@ body {
 /****************************CENTER CARD2 STYLES*****************************/
 
 .card2 {
+  position: none;
   background: #000000d0;
   color: white;
   padding: 2em;
@@ -44,12 +45,11 @@ body {
   width: 490px;
   max-width: 420px;
   margin: 1em;
-  display: none;
 }
 
 /****************************THERMOMETER STYLES*****************************/
 
-.thermometer {
+.card2 .thermometer {
   position: relative;
   height: 100%;
   width: 20%;
@@ -60,7 +60,7 @@ body {
   // background-color: #fff;
 }
 
-.bar {
+.card2 .thermometer  .bar {
   z-index: 1;
   position: absolute;
   background-color: #fff;
@@ -70,7 +70,7 @@ body {
   // transform: translateX(-50%);
 }
 
-.circle {
+.card2 .thermometer  .circle {
   background-color: #fff;
   position: absolute;
   height: 50px;
