--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -25,26 +25,25 @@ body {
 .card1 {
   background: #000000d0;
   color: white;
-  padding: 2em;
+  padding: 32px;
   border-radius: 30px;
   width: 100%;
   max-width: 420px;
-  margin: 1em;
+  margin: 16px;
 }
 
 /****************************CENTER CARD1 STYLES END*****************************/
 /****************************CENTER CARD2 STYLES*****************************/
 
 .card2 {
-  position: none;
   background: #000000d0;
   color: white;
-  padding: 2em;
+  padding: 32px;
   border-radius: 30px;
   height: 315px;
   width: 490px;
   max-width: 420px;
-  margin: 1em;
+  margin: 16px;
 }
 
 /****************************THERMOMETER STYLES*****************************/
