--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,8 +9,8 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 100vh;
   margin: 0;
+  overflow: auto;
   font-family: "Open Sans", sans-serif;
   background: #222;
   background-image: url("https://source.unsplash.com/1600x900/?weather");
@@ -23,8 +23,8 @@ body {
 }
 
 /****************************BODY STYLES END*****************************/
-/****************************CENTER CARD STYLES*****************************/
-.card {
+/****************************CENTER CARD1 STYLES*****************************/
+.card1 {
   background: #000000d0;
   color: white;
   padding: 2em;
@@ -34,7 +34,71 @@ body {
   margin: 1em;
 }
 
-/****************************CENTER CARD STYLES END*****************************/
+/****************************CENTER CARD1 STYLES END*****************************/
+/****************************CENTER CARD2 STYLES*****************************/
+.card2 {
+  background: #000000d0;
+  color: white;
+  padding: 2em;
+  border-radius: 30px;
+  height: 315px;
+  width: 490px;
+  max-width: 420px;
+  margin: 1em;
+}
+
+/****************************THERMOMETER STYLES*****************************/
+.thermometer {
+  position: relative;
+  height: 100%;
+  width: 20%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  left: 300px;
+}
+
+.bar {
+  z-index: 1;
+  position: absolute;
+  background-color: #fff;
+  height: 80%;
+  width: 15%;
+  border-radius: 25px 25px 0 0;
+}
+
+.circle {
+  background-color: #fff;
+  position: absolute;
+  height: 50px;
+  width: 50px;
+  bottom: 0;
+  border-radius: 50%;
+}
+
+/****************************THERMOMETER STYLES END*****************************/
+@media (min-width: 1070px) {
+  body {
+    height: 100vh;
+  }
+}
+
+@media (max-width: 1070px) {
+  body {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+/****************************CENTER CARD2 STYLES END*****************************/
 /****************************WEATHER SEARCH AREA STYLES*****************************/
 .search {
   display: -webkit-box;
