--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,8 +5,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
   margin: 0;
+  overflow: auto;
   font-family: "Open Sans", sans-serif;
   background: #222;
   background-image: $bodybg;
@@ -19,9 +19,10 @@ body {
 }
 /****************************BODY STYLES END*****************************/
 
-/****************************CENTER CARD STYLES*****************************/
+/****************************CENTER CARD1 STYLES*****************************/
 
-.card {
+
+.card1 {
   background: #000000d0;
   color: white;
   padding: 2em;
@@ -30,7 +31,68 @@ body {
   max-width: 420px;
   margin: 1em;
 }
-/****************************CENTER CARD STYLES END*****************************/
+
+/****************************CENTER CARD1 STYLES END*****************************/
+/****************************CENTER CARD2 STYLES*****************************/
+
+.card2 {
+  background: #000000d0;
+  color: white;
+  padding: 2em;
+  border-radius: 30px;
+  height: 315px;
+  width: 490px;
+  max-width: 420px;
+  margin: 1em;
+}
+
+/****************************THERMOMETER STYLES*****************************/
+
+.thermometer {
+  position: relative;
+  height: 100%;
+  width: 20%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  left: 300px;
+  // background-color: #fff;
+}
+
+.bar {
+  z-index: 1;
+  position: absolute;
+  background-color: #fff;
+  height: 80%;
+  width: 15%;
+  border-radius: 25px 25px 0 0;
+  // transform: translateX(-50%);
+}
+
+.circle {
+  background-color: #fff;
+  position: absolute;
+  height: 50px;
+  width: 50px;
+  bottom: 0;
+  border-radius: 50%;
+}
+
+
+/****************************THERMOMETER STYLES END*****************************/
+
+@media (min-width: 1070px){
+  body {
+    height:100vh;
+  }
+}
+@media (max-width: 1070px){
+  body {
+    flex-direction: column;
+  }
+}
+
+/****************************CENTER CARD2 STYLES END*****************************/
 
 /****************************WEATHER SEARCH AREA STYLES*****************************/
 
