--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,6 +45,7 @@ body {
   width: 490px;
   max-width: 420px;
   margin: 1em;
+  display: none;
 }
 
 /****************************THERMOMETER STYLES*****************************/
