--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -44,6 +44,7 @@ body {
   width: 490px;
   max-width: 420px;
   margin: 1em;
+  display: none;
 }
 
 /****************************THERMOMETER STYLES*****************************/
