👌 Updated Card Styles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,7 +42,7 @@ body {
   padding: 32px;
   border-radius: 30px;
   height: 315px;
-  width: 490px;
+  width: 80%;
   max-width: 420px;
   margin: 16px;
   display: none;
