--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
 /****************************BODY STYLES*****************************/
+@import url(https://fonts.googleapis.com/css?family=Ubuntu+Mono:regular,italic,700,700italic);
 body {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -11,7 +12,7 @@ body {
           align-items: center;
   margin: 0;
   overflow: auto;
-  font-family: "Open Sans", sans-serif;
+  font-family: "Ubuntu", sans-serif;
   background: #222;
   background-image: url("https://source.unsplash.com/1600x900/?weather");
   font-size: 120%;
@@ -75,17 +76,17 @@ body {
   z-index: 1;
   position: absolute;
   background-color: #fff;
-  height: 250px;
-  width: 25px;
+  height: 230px;
+  width: 15px;
   border-radius: 25px 25px 0 0;
 }
 
 .card2 .thermometer .circle {
   background-color: #fff;
   position: absolute;
-  height: 60px;
-  width: 60px;
-  bottom: 10px;
+  height: 35px;
+  width: 35px;
+  bottom: 6px;
   border-radius: 50%;
 }
 
@@ -93,12 +94,14 @@ body {
   position: relative;
   top: -25%;
   left: -30%;
+  margin-right: 10%;
 }
 
 .todaylow {
   position: relative;
   top: 20%;
   left: 30%;
+  margin-left: 55%;
 }
 
 /****************************THERMOMETER STYLES END*****************************/
@@ -114,6 +117,12 @@ body {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+  }
+}
+
+@media (max-width: 430px) {
+  .card2 .thermometer {
+    left: 100px;
   }
 }
 
