--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -42,10 +42,12 @@ body {
   color: white;
   padding: 32px;
   border-radius: 30px;
-  height: 315px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 295px;
   // width: 490px;
-  width: 60%;
-  // min-width: 420px;
+  width: 80%;
   max-width: 420px;
   margin: 16px;
   transition:visibility 0.4s ease-in-out;
@@ -62,26 +64,103 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  left: 170px;
+  // left: 170px;
   bottom: 10px;
 }
 
-.card2 .thermometer .bar {
+// .card2 .thermometer .bar {
+//   z-index: 1;
+//   position: absolute;
+//   background-color: #fff;
+//   top: -10px;
+//   height: 250px;
+//   width: 25px;
+//   border-radius: 25px 25px 0 0;
+// }
+
+// .card2 .thermometer .circle {
+//   background-color: #fff;
+//   position: absolute;
+//   height: 60px;
+//   width: 60px;
+//   bottom: 10px;
+//   border-radius: 50%;
+// }
+// .circle::after {
+//   content: "";
+//   display: block;
+//   position: absolute;
+//   height: 40px;
+//   width: 40px;
+//   border-radius: 50%;
+//   left: 50%;
+//   top: 50%;
+//   background-color: #ff0000;
+//   transform: translate(-50%, -50%);
+// }
+
+// .bar::after {
+//   content: "";
+//   display: block;
+//   height: 200px;
+//   width: 18px;
+//   position: absolute;
+//   left: 50%;
+//   transform: translateX(-50%);
+//   top: 20px;
+//   border-radius: 10px 10px 0 0;
+//   background-color: #ff0000;
+//   animation: anim 2s linear infinite;
+//   animation-iteration-count: 2;
+// }
+
+.bar {
   z-index: 1;
   position: absolute;
   background-color: #fff;
-  height: 230px;
-  width: 15px;
+  height: 220px;
+  width: 30px;
+  top: 5px;
+  left: 50%;
   border-radius: 25px 25px 0 0;
+  transform: translateX(-50%);
 }
 
-.card2 .thermometer .circle {
+.circle {
   background-color: #fff;
   position: absolute;
-  height: 35px;
-  width: 35px;
-  bottom: 6px;
+  height: 80px;
+  width: 80px;
+  bottom: 0;
   border-radius: 50%;
+}
+
+.circle::after {
+  content: "";
+  display: block;
+  position: absolute;
+  height: 55px;
+  width: 55px;
+  border-radius: 50%;
+  left: 50%;
+  top: 50%;
+  background-color: #ff0000;
+  transform: translate(-50%, -50%);
+}
+
+.bar::after {
+  content: "";
+  display: block;
+  height: 80%;
+  width: 16px;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: -22px;
+  border-radius: 10px 10px 0 0;
+  background-color: #ff0000;
+  animation: anim 2s linear infinite;
+  animation-iteration-count: 2;
 }
 .todayhigh {
   position: relative;
@@ -91,7 +170,7 @@ body {
 }
 .todaylow {
   position: relative;
-  top: 20%;
+  top: 12%;
   left: 30%;
   margin-left:55% ;
 }
@@ -109,8 +188,12 @@ body {
   }
 }
 @media (max-width:430px) {
-  .card2 .thermometer{
-    left: 100px;
+  .todayhigh {
+    margin-right:10%;
+  }
+  .todaylow {
+
+    margin-left:55% ;
   }
 }
 
