--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -178,6 +178,7 @@ body {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    padding-top: 20px;
   }
 }
 
