--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -178,7 +178,15 @@ body {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    padding-top: 20px;
+  }
+  .card1 {
+    margin-top: 120px;
+  }
+}
+
+@media (max-height: 570px) {
+  .card1 {
+    margin-top: 180px;
   }
 }
 
