--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -206,9 +206,18 @@ body {
 @media (max-width: 1070px) {
     .homePage {
         flex-direction: column;
-        padding-top:20px;
+    }
+    .card1{
+        margin-top:120px;
     }
 }
+
+@media (max-height: 570px){
+    .card1{
+        margin-top:180px;
+    }
+}
+
 
 @media (max-width:430px) {
     .todayhigh {
