--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -208,15 +208,16 @@ body {
         flex-direction: column;
     }
     .card1{
+        position:sticky;
         margin-top:120px;
     }
 }
 
-@media (max-height: 570px){
-    .card1{
-        margin-top:180px;
-    }
-}
+// @media (max-height: 570px){
+//     .card1{
+//         margin-top:180px;
+//     }
+// }
 
 
 @media (max-width:430px) {
